--- a/_includes/partials/intro.njk
+++ b/_includes/partials/intro.njk
@@ -14,7 +14,7 @@
             </a>
         </div>
         <div class="col">
-            <a href="pages/home/" class="shortcut btn">
+            <a href="pages/memory/" class="shortcut btn">
                 <img src="img/university-svgrepo-com.svg" height="32">
                 <span>memory institutions</span>
             </a>
