add project registry to the menu

--- a/_includes/partials/menu.njk
+++ b/_includes/partials/menu.njk
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                     <a href="/tags/events/" class="nav-link{% if '/tags/events/' == page.url %} active{% endif %}">Events</a>
                 </li>
+                <li class="nav-item">
+                    <a href="/map/" class="nav-link{% if '/map/' == page.url %} active{% endif %}">Project Registry</a>
+                </li>
             </ul>
             <div class="icons d-flex justify-content-end">
                 <a href="https://twitter.com/EEditiones" class="me-4">
