--- a/_includes/partials/banner.njk
+++ b/_includes/partials/banner.njk
@@ -5,7 +5,7 @@
             <p class="m-2">rooted in standards, built by a community, meant to last</p>
             <div>
                 <button class="btn btn-warning">Donate</button>
-                <button class="btn btn-warning">Join</button>
+                <a href="pages/how-to-become-a-member/" class="btn btn-warning">Join</a>
             </div>
         </div>
         <div class="container d-none d-lg-block">
