--- a/_includes/partials/sidebar.njk
+++ b/_includes/partials/sidebar.njk
@@ -1,6 +1,6 @@
 <form action="/search" class="search-form">
     <div class="input-group">
-        <input type="text" class="form-control" placeholder="Query" aria-label="Query"
+        <input type="text" class="form-control" aria-label="Query"
             aria-describedby="search-addon" name="query">
         <button id="search-button" class="btn btn-primary" type="submit">Search</button>
     </div>
