--- a/css/index.css
+++ b/css/index.css
@@ -108,13 +108,13 @@ header {
 
 main {
   position: relative;
-  padding-top: 100px;
+  padding: 100px 0 3em 0;
   margin-top: 30px;
 }
 
 main.home {
   margin-top: 0;
-  padding: 0;
+  padding: 0 0 3em 0;
   min-height: calc(100vh - 84px);
   background: #f0f0f0;
 }
