Placeholder for Dev section and menu fixes

--- a/_includes/partials/intro.njk
+++ b/_includes/partials/intro.njk
@@ -10,19 +10,19 @@
         <div class="col">
             <a href="pages/researcher/" class="shortcut btn">
             <img src="img/poet-svgrepo-com.svg" height="32">
-            <span>researchers</span>
+            <span>Researchers</span>
             </a>
         </div>
         <div class="col">
             <a href="pages/memory/" class="shortcut btn">
                 <img src="img/university-svgrepo-com.svg" height="32">
-                <span>memory institutions</span>
+                <span>Memory institutions</span>
             </a>
         </div>
         <div class="col">
-            <a href="pages/home/" class="shortcut btn">
+            <a href="pages/developer/" class="shortcut btn">
                 <img src="img/school-material-svgrepo-com.svg" height="32">
-                <span>developers</span>
+                <span>Developers</span>
             </a>
         </div>
     </div>
