Fix display for small devices

--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -24,7 +24,7 @@ templateClass: home
             {% include "partials/intro.njk" %}
         </div>
         <div class="row gx-lg-5">
-            <div class="col">{{ content | safe }}</div>
+            <div class="col-md-8">{{ content | safe }}</div>
             <aside class="col-md-4">
                 {% include "partials/sidebar.njk" %}
 
