--- a/_includes/layouts/content-sidebar.njk
+++ b/_includes/layouts/content-sidebar.njk
@@ -9,11 +9,11 @@ layout: layouts/base.njk
 <main class="container {{ templateClass }}">
     {% block top %}{% endblock %}
     <div class="row gx-5">
-        <div class="col">
+        <div class="col-md-8">
             <h1>{{ title }}</h1>
             {{ content | safe }}
         </div>
-        <aside class="col-4">
+        <aside class="col-md-4">
             {% include "partials/sidebar.njk" %}
         </aside>
     </div>
