--- a/_includes/partials/intro.njk
+++ b/_includes/partials/intro.njk
@@ -6,7 +6,7 @@
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
     </div>
-    <div class="row justify-content-md-center m-2 gx-lg-2">
+    <div class="row justify-content-md-center m-2 gx-lg-2 gy-2">
         <div class="col">
             <a href="pages/researcher/" class="shortcut btn">
             <img src="img/poet-svgrepo-com.svg" height="32">
