--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -4,9 +4,9 @@
     <div class="card h-100 {% if post.url == url %} active{% endif %}">
       <div class="card-img-top">
         {% if post.data.coverImage %}
-        <img src="{{ '/' | url }}img/{{post.data.coverImage}}">
+        <img src="{{ '/' | url }}img/{{post.data.coverImage}}" title="{{post.data.coverImageCredits | striptags}}">
         {% else %}
-        <img src="{{ '/' | url }}img/{{post.data.defaultCover}}">
+        <img src="{{ '/' | url }}img/{{post.data.defaultCover}}" title="{{post.data.coverImageCredits | striptags}}">
         {% endif %}
         <div class="tagline">
           {% for tag in post.data.tags | filterTagList %}
