--- a/css/index.css
+++ b/css/index.css
@@ -150,6 +150,7 @@ nav.navbar {
 
 ul.navbar-nav {
   --bs-nav-link-color: var(--bs-white);
+  --bs-nav-link-hover-color: var(--bs-nav-link-color);
 }
 .banner-visible ul.navbar-nav {
   --bs-nav-link-color: var(--bs-black);
