--- a/css/index.css
+++ b/css/index.css
@@ -4,17 +4,17 @@
   --font-family-body: "Lato", sans-serif;
   --font-size-small: 0.833rem;
   --font-size-smallest: 0.694rem;
+  --color-1: #E5A02E;
+  --color-2: #B05241;
+  --color-3: #5E5739;
+  --color-4: #303F2F;
   --color-highlight: #FFBB54;
-  --color-1: #8F6E43;
-  --color-2: #005248;
-  --color-3: #FFECCC;
-  --bs-link-color: #DE9A33;
-  --bs-link-hover-color: #DE9A33;
+  --bs-link-color: var(--color-1);
+  --bs-link-hover-color: var(--color-2);
   --background-color-light: rgba(255, 255, 255, .80);
   --background-color-dark: rgba(0, 0, 0, .40);
   --banner-image: url("../img/banner.jpg");
   --banner-height: 640px; /* calc(100vh - 30vh - 90px); */
-  --bs-badge-font-size: 1em;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -68,6 +68,10 @@ a[href]:hover {
   text-decoration: underline;
 }
 
+.badge {
+  --bs-badge-font-size: var(--font-size-small);
+}
+
 code {
   padding: 3px 5px;
   border-radius: 4px;
@@ -108,7 +112,7 @@ header {
 
 main {
   position: relative;
-  padding: 100px 0 3em 0;
+  padding: 84px 0 3em 0;
   margin-top: 30px;
 }
 
@@ -158,6 +162,7 @@ ul.navbar-nav {
 
 .dropdown-menu .nav-link {
   --bs-nav-link-color: var(--bs-black);
+  --bs-nav-link-hover-color: var(--bs-nav-link-color);
 }
 
 .dropdown-menu .nav-link.active {
@@ -304,12 +309,11 @@ footer {
 .blog {
 }
 
-.posts {
-  display: grid;
-  grid-template-columns: repeat(3, 33%);
-  column-gap: 20px;
-  row-gap: 20px;
-  column-fill: auto;
+/* Make sure the navbar height is taken into account when 
+ * scrolling
+ */
+:target {
+  scroll-margin-top: 84px;
 }
 
 /* Posts */
@@ -333,17 +337,38 @@ main.tmpl-post {
 }
 
 .dateline {
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 1rem;
+  font-family: var(--font-family-headings);
 }
 
 .dateline time {
-  margin-right: 2rem;
-  font-family: var(--font-family-headings);
+  display: block;
 }
 
 .credits {
   text-align: right;
   font-size: var(--font-size-small);
+}
+
+.tmpl-post aside {
+  font-size: var(--font-size-small);
+}
+
+.toc ul {
+  padding-left: 1rem;
+}
+
+.tags {
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
+  column-gap: 1rem;
+  row-gap: .5rem;
 }
 
 .twitter {
