--- a/css/index.css
+++ b/css/index.css
@@ -114,6 +114,7 @@ main {
   position: relative;
   padding: 84px 0 3em 0;
   margin-top: 30px;
+  min-height: calc(100vh - 110px);
 }
 
 main.home {
