Adding tags to the README. Add changes discussed during board meeting

--- a/_includes/partials/banner.njk
+++ b/_includes/partials/banner.njk
@@ -2,10 +2,10 @@
     <div>
         <div class="hero">
             <h1><span class="initial">e</span>ditions with <span class="initial">f</span>uture</h1>
-            <p class="m-2">rooted in standards, built by a community, meant to last</p>
+            <p class="m-2">rooted in standards, built by the community, meant to last</p>
             <div>
-                <button class="btn btn-warning">Donate</button>
                 <a href="pages/how-to-become-a-member/" class="btn btn-warning">Join</a>
+                <button class="btn btn-warning">Donate</button>
             </div>
         </div>
         <div class="container d-none d-lg-block">
