--- a/_includes/partials/intro.njk
+++ b/_includes/partials/intro.njk
@@ -1,8 +1,8 @@
 <div class="intro-text container">
     <div class="row justify-content-md-center m-3">
-        <p>We are an <strong>international non profit society</strong> gathering 
+        <p>We are an <strong>international non profit society</strong> bringing together 
         edition projects, cultural heritage institutions, 
-        scholars, and developers<br/>to <strong>empower</strong> digital projects by promoting 
+        scholars, and developers to <strong>empower</strong> digital projects by promoting 
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
     </div>
@@ -16,7 +16,7 @@
         <div class="col">
             <a href="pages/memory/" class="shortcut btn">
                 <img src="img/university-svgrepo-com.svg" height="32">
-                <span>Memory institutions</span>
+                <span>Cultural heritage institutions</span>
             </a>
         </div>
         <div class="col">
