--- a/_includes/partials/banner.njk
+++ b/_includes/partials/banner.njk
@@ -1,4 +1,4 @@
-<div class="banner" data-rellax-zindex="1" data-rellax-speed="-7">
+<div class="banner" data-rellax-speed="-7">
     <div>
         <div class="hero">
             <h1><span class="initial">e</span>ditions with <span class="initial">f</span>uture</h1>
