Fix pb-components import

--- a/pages/documentation.njk
+++ b/pages/documentation.njk
@@ -61,5 +61,5 @@ eleventyComputed:
         </div>
     </main>
 </pb-page>
-<!--script type="module" src="https://cdn.jsdelivr.net/npm/@teipublisher/pb-components@latest/dist/pb-components-bundle.js"></script-->
-<script type="module" src="http://localhost:8000/src/pb-components-bundle.js"></script>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@teipublisher/pb-components@latest/dist/pb-components-bundle.js"></script>
+<!--script type="module" src="http://localhost:8000/src/pb-components-bundle.js"></script-->
