--- a/pages/tei-publisher/documentation.njk
+++ b/pages/tei-publisher/documentation.njk
@@ -16,7 +16,7 @@ eleventyComputed:
 
     <main class="container tmpl-documentation">
         <div class="row gx-lg-3 gx-2">
-            <div class="col-lg-8 content">
+            <div class="col-lg-8 content d-flex flex-column">
                 <div class="row">
                     <ul class="nav justify-content-start align-items-center flex-nowrap gap-2">
                         <li class="nav-item d-lg-none">
@@ -41,13 +41,13 @@ eleventyComputed:
                         </li>
                     </ul>
                 </div>
-                <div class="row">
+                <div class="row flex-grow-1 overflow-auto">
                     <pb-view id="view1" src="document1" append-footnotes="append-footnotes" subscribe="transcription" emit="transcription"
                         static="" no-scroll>
                     </pb-view>
                 </div>
             </div>
-            <aside class="col-lg-4">
+            <aside class="col-lg-4 overflow-auto">
                 <div class="offcanvas-lg offcanvas-start" tabindex="-1" id="toc-panel" aria-labelledby="offcanvasExampleLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasExampleLabel">Contents</h5>
@@ -61,5 +61,5 @@ eleventyComputed:
         </div>
     </main>
 </pb-page>
-<script type="module" src="https://cdn.jsdelivr.net/npm/@teipublisher/pb-components@latest/dist/pb-components-bundle.js"></script>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@teipublisher/pb-components@1.38.7/dist/pb-components-bundle.js"></script>
 <!--script type="module" src="http://localhost:8000/src/pb-components-bundle.js"></script-->
