--- a/_includes/partials/intro.njk
+++ b/_includes/partials/intro.njk
@@ -1,10 +1,6 @@
-<div class="intro-text container">
-    <div class="row justify-content-md-center m-3">
-        <p>We are an <strong>international non profit society</strong> bringing together 
-        edition projects, cultural heritage institutions, 
-        scholars, and developers to <strong>empower</strong> digital projects by promoting 
-        <strong>open standards</strong> and <strong>community collaboration</strong>.
-        Curious?</p>
+<div class="intro-text container mt-2">
+    <div class="row justify-content-md-center">
+        <p>We are an <strong>international non profit society</strong> bringing together edition projects, cultural heritage institutions, scholars, and developers to <strong>empower</strong> digital projects by promoting <strong>open standards</strong> and <strong>community collaboration</strong> – with the ultimate goal of helping to sustain editions far into the future.</p>
     </div>
     <div class="row justify-content-md-center m-2 gx-lg-2 gy-2">
         <div class="col">
