--- a/_includes/partials/tagcloud.njk
+++ b/_includes/partials/tagcloud.njk
@@ -1,8 +1,11 @@
 <ul class="cloud" role="navigation" aria-label="tag cloud" data-show-value>
   {% for tag, count in collections.tagList %}
     {% set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
+    {% set weight = count // 2 + 1 %}
+    {% set fontSize %}calc({{weight}} * 0.15rem + var(--font-size-smallest)){% endset %}
     <li>
-      <a href="{{ tagUrl | url }}" data-weight="{{count}}" class="post-tag">{{ tag }}</a>
+      <a href="{{ tagUrl | url }}" data-count="{{count}}" 
+        style="font-size: {{fontSize}};" class="post-tag">{{ tag }}</a>
     </li>
   {% endfor %}
 </ul>
