--- a/search.njk
+++ b/search.njk
@@ -5,7 +5,7 @@ templateClass: 'search'
 ---
 {% block scripts %}
 <script src="https://cdn.jsdelivr.net/gh/nextapps-de/flexsearch@0.7.2/dist/flexsearch.bundle.js"></script>
-<script src="/scripts/search.js"></script>
+<script src="/assets/scripts/search.js"></script>
 {% endblock %}
 
 <header>
