Add redirect for CMS

--- a/index.njk
+++ b/index.njk
@@ -14,3 +14,14 @@ show: 9
   {% set postslistCounter = collections.posts | length %}
   {% include "postslist.njk" %}
 </section>
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
