--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/prism-diff.css' | url }}">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
     <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    {# <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> #}
     {% block styles %}{% endblock %}
   </head>
   <body>
