--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -23,4 +23,5 @@
       <script src="/assets/scripts/common.js"></script>
       {% block scripts %}{% endblock %}
   </body>
+  <a rel="me" href="https://social.e-editiones.org/@eeditiones">Mastodon</a>
 </html>
