--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -16,11 +16,11 @@ templateClass: tmpl-post
             </div>
 
             {% if tags | hasTag('meetups') %}
-            <p class="alert alert-warning">The <a href="{{ '/pages/community-meetings' | url }}">community meetings</a> are held online at 
-                <a href="https://meet.existsolutions.com/eeditiones">https://meet.existsolutions.com/eeditiones</a>, 
+            <p class="alert alert-warning">The <a href="{{ '/pages/community-meetings' | url }}" class="alert-link" >community meetings</a> are held online at 
+                <a class="alert-link" href="https://meet.existsolutions.com/eeditiones">https://meet.existsolutions.com/eeditiones</a>, 
                 usually on the first Tuesday of each month at 17:00 CET/CEST. No registration is required to attend. 
                 We warmly invite you to propose topics 
-                <a href="mailto:info@e-editiones.org">info@e-editiones.org</a> 
+                <a class="alert-link" href="mailto:info@e-editiones.org">info@e-editiones.org</a> 
                 for the forthcoming meetings.
             </p>
             {% endif %}
