--- a/index.njk
+++ b/index.njk
@@ -7,11 +7,12 @@ show: 9
 ---
 
 <section class="blog">
-  {% set maxPosts = collections.posts.length | min(show) %}
+  {% set posts = collections.posts | excludeDrafts %}
+  {% set maxPosts = posts | min(show) %}
   <h3>Latest Posts <small><a href="/posts/">See all</a></small></h3>
 
-  {% set postslist = collections.posts | head(-show) %}
-  {% set postslistCounter = collections.posts | length %}
+  {% set postslist = posts | head(-show) %}
+  {% set postslistCounter = posts | length %}
   {% include "postslist.njk" %}
 </section>
 {#
