--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -396,6 +396,11 @@ main.tmpl-post {
   font-size: var(--font-size-small);
 }
 
+.alert a {
+  --bs-link-color: var(--color-2);
+  font-weight: bolder;
+}
+
 main.tmpl-documentation {
   margin-top: 104px;
   padding-top: 0;
@@ -525,5 +530,13 @@ ul.cloud li:nth-child(5n+1) a { --color: var(--color-4); }
   main {
     margin-top: 0;
     padding: 0;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    break-after: avoid;
+  }
+
+  code[class*="language-"] {
+    white-space: pre-wrap;
   }
 }
