--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,6 +1,6 @@
-<div class="row row-cols-xl-3 row-cols-lg-2 row-cols-md-2 row-cols-1 gx-2 gy-2">
+<div class="row row-cols-lg-1 row-cols-xl-2 row-cols-xxl-3 gx-2 gy-2">
   {% for post in postslist | reverse %}
-  <div class="col col-sm-1">
+  <div class="col col-12 col-xl-6 col-xxl-4">
     <div class="card h-100 {% if post.url == url %} active{% endif %}">
       <div class="card-img-top">
         {% if post.data.coverImage %}
