change community meeting link on Teams instead of Jitsi

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -17,7 +17,7 @@ templateClass: tmpl-post
 
             {% if tags | hasTag('meetups') %}
             <p class="alert alert-warning">The <a href="{{ '/pages/community-meetings' | url }}" class="alert-link" >community meetings</a> are held online using
-              <a class="alert-link" href="https://meet.existsolutions.com/eeditiones">this link</a>,
+              <a class="alert-link" href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_NGI2N2I1NWEtZmVkNy00MGI0LWEzZjgtNzU4YzlhY2I1M2Rj%40thread.v2/0?context=%7b%22Tid%22%3a%22bd21f2e9-9af5-42a1-8caf-eb264278467f%22%2c%22Oid%22%3a%2210b0f60b-ba0a-446b-81af-8ba3b4070d61%22%7d">this link</a>,
                 usually on the first Tuesday of each month at 17:00 CET/CEST. No registration is required to attend. 
                 We warmly invite you to propose topics 
                 <a class="alert-link" href="mailto:info@e-editiones.org">info@e-editiones.org</a> 
