Add matomo tracking, imprint and gdpr declaration

--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -1,4 +1,6 @@
 <footer class="p-2">
-    <div>e-editiones | c/o Stadtarchiv der Ortsbürgergemeinde St.Gallen | Notkerstrasse 22 | CH-9000 St. Gallen | info@e-editiones.org<br/>
-    IBAN: CH21 0900 0000 1549 5086 6 | BIC: POFICHBEXXX</div>
+    <div class="col-8">e-editiones | c/o Stadtarchiv der Ortsbürgergemeinde St.Gallen | Notkerstrasse 22 | CH-9000 St. Gallen | info@e-editiones.org<br/>
+    IBAN: CH21 0900 0000 1549 5086 6 | BIC: POFICHBEXXX<br/>
+    <a href="/pages/imprint">Imprint</a> | <a href="/pages/gdpr">Data Protection</a>
+    </div>
 </footer>
