replaced flyer in sidebar with a cover image of only the first page

--- a/_includes/partials/sidebar-flyer.njk
+++ b/_includes/partials/sidebar-flyer.njk
@@ -1,9 +1,8 @@
 <div class="download-flyer">
-    <object data='/assets/files/dh24-eeditiones-flyer-v2.3.pdf' 
-        type='application/pdf' 
-        width='100%' height='575px'>
-    </object>
-    <a href='/assets/files/dh24-eeditiones-flyer-v2.3.pdf'>Download</a>    
+    <a href='/assets/files/dh24-eeditiones-flyer-v2.3.pdf'>        
+        <img src='../img/dh24-eeditiones-flyer-cover-image.jpg' width='100%'>
+        <div>Download Flyer</div>            
+    </a>    
     <hr>
     <a href="https://tei-publisher.com">
         <div style="padding-bottom:1em;">Toolbox by and for the digital humanities</div>            
