Some capitalization changes

--- a/_includes/partials/sidebar-flyer.njk
+++ b/_includes/partials/sidebar-flyer.njk
@@ -5,7 +5,7 @@
     </a>    
     <hr>
     <a href="https://tei-publisher.com">
-        <div style="padding-bottom:1em;">Toolbox by and for the digital humanities</div>            
+        <div style="padding-bottom:1em;">A toolbox by and for the digital humanities</div>            
         <svg width="90%"  viewBox="0 0 872 229" xmlns="http://www.w3.org/2000/svg" aria-labelledby="title desc" role="img">
             <title id="title">TEI Publisher Logo</title>
             <desc id="desc">A logo consisting of a handdrawn dark-gray code bracket with orange lines on the right and the words tei publisher.</desc>
