added temp. dh2024 button

--- a/_includes/partials/banner.njk
+++ b/_includes/partials/banner.njk
@@ -4,7 +4,8 @@
             <h1><span class="initial">e</span>ditions with <span class="initial">f</span>uture</h1>
             <p class="m-2">rooted in standards, built by the community, meant to last</p>
             <div>
-                <a href="pages/how-to-become-a-member/" class="btn btn-warning">Join</a>
+                <a href="/dh2024" class="btn btn-warning">DH2024</a>
+                <a href="/join" class="btn btn-warning">Join</a>
                 <a href="https://paypal.me/eeditiones" class="btn btn-warning">Donate</a>
             </div>
         </div>
