--- a/registry.njk
+++ b/registry.njk
@@ -28,7 +28,7 @@ templateClass: 'registry'
         </div>
         <!-- Flexbox-Container für Suchfeld und Reset-Button -->
         <div id="filter-container">
-            <input type="text" id="search" placeholder="&#x1F50D; Filter list" />
+            <input type="text" id="search" placeholder="Filter list" />
             <button id="reset">Reset Filters</button>
         </div>
 
